# jxGuide

./: .gitignore  CODE_OF_CONDUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
server/: Cargo.toml
server/src/: main.rs  position.rs
src/: App.vue  config.ts  main.ts  style.css
src/components/: ChatPanel.vue
src/router/: index.ts
src/views/: Chat.vue  Guide.vue  Welcome.vue  chat.css  chat.js  chat.ts
