[package]
name = "server"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true
jobs = 8

[profile.release]
incremental = true
jobs = 8

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
